[gd_scene load_steps=3 format=3 uid="uid://dcnkqgnufc25a"]

[ext_resource type="Theme" uid="uid://bidvx46gwa6cf" path="res://common/theme.tres" id="1_b7sve"]
[ext_resource type="Script" path="res://game_over_screen/game_over_screen.gd" id="1_slymo"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_b7sve")
script = ExtResource("1_slymo")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.5
offset_top = -333.5
offset_right = 449.5
offset_bottom = 333.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="CompletionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Congratulations!"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Score"

[node name="ScoreLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "12345"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Buildings Destroyed:"

[node name="BuildingsDestroyedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "64/64"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Time: "

[node name="TimerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "120s"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Quit"

[node name="PlayAgainButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Play Again
"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
